--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  contact-list works!
-</p>
+<ul class="list-group">
+  <li class="list-group-item"
+    *ngFor="let contact of contacts">
+    {{contact.name}}
+  </li>
+</ul>
