add contact detail-master component to app

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,6 +1,10 @@
 <ul class="list-group">
   <li class="list-group-item"
-    *ngFor="let contact of contacts">
+    *ngFor="let contact of contacts"
+    (click)="selectContact(contact)">
     {{contact.name}}
   </li>
 </ul>
+<contact-detail
+  [contact]="selectedContact">
+</contact-detail>
