adding all of the final components and stylings

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,10 +1,32 @@
-<ul class="list-group">
-  <li class="list-group-item"
-    *ngFor="let contact of contacts"
-    (click)="selectContact(contact)">
-    {{contact.name}}
-  </li>
-</ul>
-<contact-detail
-  [contact]="selectedContact">
-</contact-detail>
+<div class="row">
+    <div class="col-md-4 col-md-offset-1">
+      <h2>
+        Contacts
+        <button type="button" class="btn btn-success pull-right"  (click)="createNewContact()">
+          <span class="glyphicon glyphicon-plus"></span>
+        </button>
+      </h2>
+
+      <div *ngIf="loaded && contacts.length == 0" class="error">
+        No Contacts add a contact
+      </div>
+
+      <ul *ngIf="loaded && contacts.length > 0" class="list-group">
+        <li class="list-group-item"
+          *ngFor="let contact of contacts"
+          [class.active]="contact === selectedContact"
+          (click)="selectContact(contact)">
+          {{contact.name}}
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-md-4 col-md-offset-1">
+      <contact-detail
+        [contact]="selectedContact"
+        [createHandler]="addContact.bind(this)"
+        [updateHandler]="updateContact.bind(this)"
+        [deleteHandler]="deleteContact.bind(this)">
+      </contact-detail>
+    </div>
+  </div>
