--- a/src/app/contacts/contact-details/contact-details.component.html
+++ b/src/app/contacts/contact-details/contact-details.component.html
@@ -1,3 +1,25 @@
-<p>
-  contact-details works!
-</p>
+<div *ngIf="contact">
+  <h2 *ngIf="contact._id">Contact Details</h2>
+  <h2 *ngIf="!contact._id">Create Contact</h2>
+  <form>
+    <div class="form-group">
+      <label for="contact-name">Name:</label>
+      <input class="form-control" name="contact-name" [(ngModel)]="contact.name" placeholder="Name"/>
+    </div>
+    <div class="form-group">
+      <label for="contact-email">Email:</label>
+      <input class="form-control" name="contact-email" [(ngModel)]="contact.email" placeholder="example@abc.com"/>
+    </div>
+    <div class="form-group">
+      <label for="contact-phone-mobile">Mobile:</label>
+      <input class="form-control" name="contact-phone-mobile" [(ngModel)]="contact.phone.mobile" placeholder="6431111"/>
+    </div>
+    <div class="form-group">
+      <label for="contact-phone-work">Work:</label>
+      <input class="form-control" name="contact-phone-work" [(ngModel)]="contact.phone.work" placeholder="9670309"/>
+    </div>
+    <button class="btn btn-primary" *ngIf="!contact._id" (click)="createContact(contact)">Create</button>
+    <button class="btn btn-info" *ngIf="contact._id" (click)="updateContact(contact)">Update</button>
+    <button class="btn btn-danger" *ngIf="contact._id" (click)="deleteContact(contact)">Delete</button>
+  </form>
+</div>
